rbx_binary/src/tests/snapshots/rbx_binary__tests__util__ref-parent__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: Ref Target
  class: Folder
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      BinaryString: ""
  children:
    - referent: referent-1
      name: Value
      class: ObjectValue
      properties:
        AttributesSerialize:
          BinaryString: ""
        Tags:
          BinaryString: ""
        Value: referent-0
      children: []

